tests/sumo/devices/ssm/errors/testsuite.sumo
# Given white list of edges contains edge_id that is not defined. 
filter_edges_edge_not_found

# Given white list of edge and junctions contains junction_id that is not defined. 
filter_edges_junction_not_found

# Given white list of edges contains line that is not defined. 
filter_edges_cannot_interpret_line
